retrieveUnpackaged/objects/TQB_Ad_Hoc_Entry__c.object
<CustomObject>
    <description>A candidates external (ad hoc) references that may be used for the package review.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Area__c</fullName>
        <label>Research Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if supervisor selects the ad hoc reference. False if the supervisor does not select the ad hoc reference.</description>
        <inlineHelpText>True if supervisor selects the ad hoc reference. False if the supervisor does not select the ad hoc reference.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TQB_Candidate_Package__c</fullName>
        <label>TQB_Candidate_Package</label>
        <referenceTo>TQB_Candidate_Package__c</referenceTo>
        <relationshipLabel>TQB Ad Hoc Entries</relationshipLabel>
        <relationshipName>TQB_Ad_Hoc_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TQB Ad Hoc Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ADHOC-{0000}</displayFormat>
        <label>TQB Ad Hoc User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TQB Ad Hoc Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Mailing_Zip_Code</fullName>
        <active>false</active>
        <description>Validates that the contact Mailing Zip/Postal Code is in 99999 or 99999-9999 format if Mailing Country is USA or blank.</description>
        <errorConditionFormula>AND(
   NOT(ISBLANK(Postal_Code__c)),
  OR( 
   AND(LEN(Postal_Code__c) &lt;&gt;5, 
   LEN(Postal_Code__c) &lt;&gt; 10),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      LEFT( Postal_Code__c, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 2, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 3, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 4, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 5, 1))),
   AND(
    LEN(Postal_Code__c) = 10,
   OR(
    MID( Postal_Code__c , 6, 1) &lt;&gt; &quot;-&quot;,
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 7, 1))),
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 8, 1))),
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 9, 1))),
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( Postal_Code__c , 10, 1)))
   )
  )
 )
)</errorConditionFormula>
        <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>US_Phone_Number_Has_Ten_Digits</fullName>
        <active>false</active>
        <description>Validates that the Phone number is in (999) 999-9999 format. This works by using the REGEX function to check that the number has ten digits in the (999) 999-9999 format.</description>
        <errorConditionFormula>NOT(ISBLANK(Phone__c)) &amp;&amp; NOT(REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorMessage>US phone numbers should be in this format: (999) 999-9999.</errorMessage>
    </validationRules>
</CustomObject>